--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -29128,11 +29128,7 @@ video {
   animation: bounce 1s infinite;
 }
 
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
+@import "http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css";
 
 @media (min-width: 640px) {
   .sm\:container {
